# gig-log

./: .env.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  claude.md  collections.toml  docker-compose.yaml  example.api-tester.env  example.variables.toml  justfile  payment-tests.md
api/: .env.example  Cargo.toml
api/.posting/auth/: change-password.posting.yaml  confirm-email.posting.yaml  forgot-password.posting.yaml  log-in.posting.yaml  set-password.posting.yaml  sign-up.posting.yaml  verify-forgot-password.posting.yaml
api/migrations/: 20260120082539_create_user_table.sql  20260120084024_create_company_table.sql  20260120085504_create_job_table.sql  20260120091314_create_payment_table.sql  20260120092748_create_work_session_table.sql  20260220183000_add_user_color_palettes_and_preferences.sql  20260221101500_add_palette_role_seed_colors.sql  20260221153000_replace_preset_palette_values.sql  20260228073013_create_users_table.up.sql  20260228075901_create_companies_table.up.sql  20260228083109_create_jobs_table.down.sql  20260228083109_create_jobs_table.up.sql  20260228085057_create_work_sessions_table.down.sql  20260228085057_create_work_sessions_table.up.sql  20260228090530_create_payments_table.down.sql  20260228090530_create_payments_table.up.sql  20260228092112_create_auth_codes_table.down.sql  20260228092112_create_auth_codes_table.up.sql  20260228092515_create_refresh_tokens_table.up.sql  20260228094425_create_appearance_tables.down.sql  20260228094425_create_appearance_tables.up.sql
api/src/: lib.rs  main.rs
api/src/auth/: code.rs  codes.rs  cookies.rs  jwt.rs  middleware.rs  mod.rs  password.rs  user.rs
api/src/controllers/: auth.rs  health.rs  mod.rs
api/src/core/: app.rs  config.rs  docker.rs  env.rs  error.rs  logger.rs  mod.rs  server.rs
api/src/core/logger/: backend.rs  formatting.rs  middleware.rs  mod.rs  redaction.rs
api/src/email/: client.rs  mod.rs
api/src/email/senders/: auth.rs  mod.rs
api/src/extractors/: mod.rs  validated_json.rs
api/src/handlers/: auth.rs  health.rs
api/src/models/: auth_code.rs  color_palette.rs  company.rs  job.rs  mod.rs  payment.rs  refresh_token.rs  user.rs  user_appearance_preference.rs  work_session.rs
api/src/repo/: auth_code.rs  company.rs  mod.rs  refresh_token.rs  user.rs
api/src/repository/: appearance.rs  auth.rs  companies.rs  jobs.rs  mod.rs  payments.rs  work_sessions.rs
api/src/routes/: app.rs  auth.rs  health.rs  mod.rs
api/src/routes/appearance/: handlers.rs  mod.rs  payloads.rs
api/src/routes/auth/: handlers.rs  mod.rs  payloads.rs
api/src/routes/companies/: handlers.rs  mod.rs  payloads.rs
api/src/routes/health/: handlers.rs
api/src/routes/jobs/: handlers.rs  mod.rs  payloads.rs
api/src/routes/payments/: handlers.rs  mod.rs  payloads.rs
api/src/routes/work_sessions/: handlers.rs  mod.rs  payloads.rs
api/src/services/: email.rs  mod.rs  palette_generation.rs
api/src/utils/: validators.rs
api/src/validators/: color_hex.rs  company_tax_rate.rs  job_payment_type.rs  mod.rs  password_match.rs  payment_consistency.rs
api/tests/: appearance_flows.rs  auth_flows.rs  common_compile.rs  companies_flows.rs  jobs_flows.rs  payments_flows.rs  work_sessions_flows.rs
api/tests/common/: helpers.rs  mod.rs
api/tests/support/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  logging.rs
common/src/models/: appearance.rs  company.rs  error.rs  generic.rs  health.rs  job.rs  mod.rs  payment.rs  user.rs  work_session.rs
common/src/validators/: mod.rs  user.rs
dev-tools/: Cargo.toml
dev-tools/src/: cli.rs  main.rs
dev-tools/src/api_tester/: app.rs  body_preview.rs  collection.rs  executor.rs  mod.rs  paths.rs  route_list_state.rs  variables.rs
dev-tools/src/api_tester/components/: body_editor.rs  global_listener.rs  mod.rs  route_list.rs
dev-tools/src/db_viewer/: app.rs  db.rs  editor.rs  mod.rs  paths.rs
dev-tools/src/db_viewer/components/: global_listener.rs  mod.rs
dev-tools/src/dev/: log_store.rs  mod.rs  process.rs  tui.rs  ui.rs  watcher.rs  web_log_relay.rs
dev-tools/src/docs/: doc_index.rs  mod.rs
dev-tools/src/setup/: mod.rs
dev-tools/src/utils/: env.rs  mod.rs  sub.rs
web/: .cta.json  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/.storybook/: main.ts  preview.ts  preview.tsx
web/src/: app.rs  lib.rs  logging.rs  main.rs  main.tsx  routeTree.gen.ts
web/src/api_client/: client.rs  error.rs  mod.rs
web/src/api_client/requests/: auth.rs  mod.rs
web/src/components/: mod.rs
web/src/components/core/: card.rs  loading_spinner.rs  mod.rs  (+3 more)
web/src/contexts/: AppearanceContext.tsx  AuthContext.tsx  NotificationContext.test.tsx  NotificationContext.tsx  WorkSessionContext.test.tsx  WorkSessionContext.tsx  auth.rs  mobile.rs  mod.rs  notification.rs
web/src/hooks/: useForm.ts  useFormMutation.ts
web/src/layouts/: auth.rs  main.rs  mod.rs  root.rs
web/src/lib/: appearance.test.ts  appearance.ts  axios.test.ts  axios.ts  errors.ts
web/src/pages/: dashboard.rs  home.rs  mod.rs  not_found.rs  settings.rs
web/src/routes/: __root.tsx  _authenticated.tsx  index.tsx
web/src/test-utils/: mockApiClient.ts
web/src/utils/: capitalize.test.ts  class_name.rs  mod.rs
web/styles/: main.scss
web/styles/components/: _loading-spinner.scss  _notifications.scss  index.scss
web/styles/core/: _base.scss  _labels.scss  _paragraphs.scss
web/styles/layouts/: _auth.scss  _main.scss  _root.scss  index.scss
web/styles/mixins/: _theme.scss
web/styles/pages/: _home.scss
web/styles/variables/: _colors.scss
(+303 files in other folders)
