[package]
name = "gig-log-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
gig-log-common = { path = "../common", features = ["validation"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.4"
tower-http = { version = "0.6.8", features = ["cors"] }
tuirealm = "3.3.0"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
