[package]
name = "gig-log-common"
version = "0.1.0"
edition = "2024"

[features]
default = []
validation = ["dep:validator"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"], optional = true }
