[package]
name = "gig-log-dev-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gig-log-dev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
ansi-to-tui = "7"
