[package]
name = "gig-log-dev-tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gig-log-dev-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
libc = "0.2"
ansi-to-tui = "7"
dialoguer = "0.11"
rand = "0.9"
toml = "1.0.4"
tuirealm = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
