[package]
name = "gig-log-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
gig-log-common = { path = "../common" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
leptos = { version = "0.8.16", features = ["csr"] }
leptos_router = "0.8.12"
log = "0.4.28"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = ["Window", "Location", "Storage", "console", "EventTarget", "MediaQueryList", "MediaQueryListEvent"] }
